--- a/KinneretCollegeTimeSheet/KinneretCollegeTimeSheet/Views/UserCourses/Index.cshtml
+++ b/KinneretCollegeTimeSheet/KinneretCollegeTimeSheet/Views/UserCourses/Index.cshtml
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Course.Id)
+                @Html.DisplayNameFor(model => model.Id)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Course.Name)
@@ -38,7 +38,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Course.Id)
+                @Html.DisplayFor(modelItem => item.Id)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Course.Name)
